# poke

./: .dockerignore  .drone.yml  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  HOSTING_REQUIREMENTS.md  LICENSE  LICENSE-APPSTORE.md  README.md  ascii_txt.txt  config.json  config.json.example  docker-compose.yml  entrypoint.sh  feautures.md  fix-videoplayback-issues.md  infocards.json  instances.json  music.css  nginx.conf.example  opensearch.xml  package.json  poke-cli.sh  poke-gtk-app.py  poke.service  poke_destkop_app_readme.md  pokeatmosurls.json  robots.txt  server.js  sponsors.json  why-error.md
alac/: readme.md
backend-services/: README.md
core/: README
css/:  poketube.css  app-cdn.min.css  app.js  app.main.css  bg-480.webm  bg-720.webm  color-dark.css  custom-css.js  data-mobile.js  desktop.css  emojis.js  improving-poke.js  landing.css  maps.js  mobile.css  music.css  music.sv  player-base-new.js  player-base.js  poketube-responsive.css  poketube.css  pv.css  pv.main.css  search-web.main.css  search.main.css  snow.css  stats.js  videojs-plugin-hotkeys.js  videojs-v8.16.0.css  vjs.min.js  watch-navbar.css  watch-util.css  watch.main.css  weather-client.js
docker/: Caddyfile  invidious.yaml  lighttube.yaml  mongo.env  poke.json  postgres.env  pproxy.json
html/: 143.ejs  (+48 more)
january/: Cargo.toml  Dockerfile  LICENSE  README.md  gitlab-ci.yml
january/src/: main.rs
january/src/routes/: embed.rs  info.rs  mod.rs  proxy.rs
january/src/structs/: embed.rs  media.rs  metadata.rs  mod.rs  special.rs
january/src/util/: mod.rs  request.rs  result.rs  variables.rs
(+155 files in other folders)
